--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -8,12 +8,12 @@
 </div>
 <div class="rooms">
   <div class="room">
-    <div class="chat-room">
+    <div class="room-name">
       <a href="#">techroom1</a>
     </div>
   </div>
   <div class="room">
-    <div class="chat-room">
+    <div class="room-name">
       <a href="#">techroom2</a>
     </div>
   </div>
